--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@material-tailwind/react": "^2.1.2",
     "next": "latest",
     "react": "latest",
     "react-dom": "latest"
